This is for my macOS git push or pull at Fri Jan 16 21:24:01 CST 2026. Last changed file: java/debug/java-G1GC.md